# frontend

./: LICENSE  README.md  meson.build
include/: linked_list.h
src/: linked_list.c  main.c
